examples/bad/ex5.shl
int main(){
    int a=12/0;
    return 0;
}